// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bottom should not render anything if the label doesn't exist 1`] = `null`;

exports[`Bottom should render correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 4,
        "justifyContent": "space-between",
        "paddingBottom": 6,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 6,
      },
      {
        "backgroundColor": "#F56522",
      },
    ]
  }
>
  <test-file-stub
    fill="#FFFCFA"
    style={
      [
        {
          "height": 24,
          "width": 24,
        },
        {
          "height": 28,
          "opacity": 0,
          "width": 28,
        },
        false,
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 4,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 28,
            },
            {
              "color": "#FFFCFA",
            },
          ],
        ]
      }
    >
      label
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "height": 28,
          "justifyContent": "center",
          "width": 28,
        },
        {
          "opacity": 0,
        },
      ]
    }
  >
    <test-file-stub
      fill="#FFFCFA"
      style={
        [
          {
            "height": 24,
            "width": 24,
          },
          {
            "height": 28,
            "width": 28,
          },
          false,
        ]
      }
    />
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          {
            "fontFamily": "Baloo2-Bold",
            "position": "absolute",
            "textAlign": "center",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Bottom should render correctly with labelIcon 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 4,
        "justifyContent": "space-between",
        "paddingBottom": 6,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 6,
      },
      {
        "backgroundColor": "#F56522",
      },
    ]
  }
>
  <test-file-stub
    fill="#FFFCFA"
    style={
      [
        {
          "height": 24,
          "width": 24,
        },
        {
          "height": 28,
          "opacity": 0,
          "width": 28,
        },
        false,
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 4,
      }
    }
  >
    <test-file-stub
      fill="#888"
      style={
        [
          {
            "height": 24,
            "width": 24,
          },
          undefined,
          {
            "height": 10,
            "width": 10,
          },
        ]
      }
    />
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 28,
            },
            {
              "color": "#FFFCFA",
            },
          ],
        ]
      }
    >
      label
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "height": 28,
          "justifyContent": "center",
          "width": 28,
        },
        {
          "opacity": 0,
        },
      ]
    }
  >
    <test-file-stub
      fill="#FFFCFA"
      style={
        [
          {
            "height": 24,
            "width": 24,
          },
          {
            "height": 28,
            "width": 28,
          },
          false,
        ]
      }
    />
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          {
            "fontFamily": "Baloo2-Bold",
            "position": "absolute",
            "textAlign": "center",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Bottom should render correctly with unreadMessages 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 4,
        "justifyContent": "space-between",
        "paddingBottom": 6,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 6,
      },
      {
        "backgroundColor": "#F56522",
      },
    ]
  }
>
  <test-file-stub
    fill="#FFFCFA"
    style={
      [
        {
          "height": 24,
          "width": 24,
        },
        {
          "height": 28,
          "opacity": 0,
          "width": 28,
        },
        false,
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 4,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 28,
            },
            {
              "color": "#FFFCFA",
            },
          ],
        ]
      }
    >
      label
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "height": 28,
          "justifyContent": "center",
          "width": 28,
        },
        false,
      ]
    }
  >
    <test-file-stub
      fill="#FFFCFA"
      style={
        [
          {
            "height": 24,
            "width": 24,
          },
          {
            "height": 28,
            "width": 28,
          },
          false,
        ]
      }
    />
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          {
            "fontFamily": "Baloo2-Bold",
            "position": "absolute",
            "textAlign": "center",
          },
        ]
      }
    >
      10
    </Text>
  </View>
</View>
`;
